--- a/index.html
+++ b/index.html
@@ -1,12 +1,4 @@
-<doctype html>
-<html>
-    <head>
-
-    </head>
-    <body>
-        <a target="_blank" href="https://qm.qq.com/cgi-bin/qm/qr?k=ics-a-a2ZMXjerjYoXAWIerVvIpYzUX9&jump_from=webapi">
-            <img border="0" src="http://pub.idqqimg.com/wpa/images/group.png" alt="痄草学派" title="痄草学派">
-        </a>
-
-    </body>
+<!DOCTYPE HTML>
+</html><head></head>
+<body onload="parent.location='https://jq.qq.com/?_wv=1027&k=ubwAQYx9' "></body>
 </html>
